--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.6.2",
     "bcryptjs": "^2.4.3",
     "flowbite": "^2.2.1",
     "flowbite-react": "^0.7.2",
